test/compile_errors/stage1/obj/threadlocal_qualifier_on_const.zig
threadlocal const x: i32 = 1234;
export fn entry() i32 {
    return x;
}

// threadlocal qualifier on const
//
// tmp.zig:1:1: error: threadlocal variable cannot be constant
